# Knowledge_rag_system

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  rag项目分析报告.md
app/agent/: agent_service.py
app/config/: agent.yaml  chroma.yaml  loader.py  prompt.yaml
app/config/prompts/: agent.txt  hyde.txt  rag_answer.txt  rewrite.txt  summary.txt  system.txt  vision.txt
app/core/: background_init.py  failed_response.py  logger_handler.py  success_response.py
app/memory/: memory_service.py
app/rag/: chunk_batch_buffer.py  rag_service.py  reorder_service.py  single_upload_tracker.py  text_spliter.py  vector_store.py  web_search_service.py
app/rag/agent/: agent_service.py
app/rag/document_handler/: processor.py
app/rag/md5_manager/: md5_store.py
app/rag/retrievers/: empty_retriever.py  hybrid_retriever.py  query_rewriter.py
app/rag/zip_handler/: zip_handler.py
app/router/: chat_router.py  chat_service.py  conversation_router.py  conversation_service.py  knowledge_router.py  knowledge_service.py  zip_router.py
app/schemas/: models.py
app/utils/: factory.py  file_handler.py  image_extractor.py  log_tool.py  md_parser.py  mineru_scan_loader.py  path_tool.py  pdf_loader.py  pdf_multimodal_loader.py  prompt_loader.py  vision_service.py
front/: api_client.py  app.py  config.py
front/.streamlit/: config.toml
front/pages/: 01_knowledge.py  02_conversations.py
