[project]
name = "knowledge-rag-system"
version = "0.1.0"
description = "本地知识库 RAG 检索系统 — FastAPI + LangChain + ChromaDB"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.12",
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langchain-community>=0.3.0",
    "langchain-classic>=0.0.0",
    "langchain-chroma>=0.2.0",
    "langchain-openai>=0.3.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0",
    "dashscope>=1.20.0",
    "modelscope>=1.20.0",
    "python-magic>=0.4.27",
    "aiofiles>=24.0.0",
    "imagehash>=4.3.1",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "jieba>=0.42.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "unstructured>=0.16.0",
    "openpyxl>=3.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
