[project]
name = "knowledge-rag-system"
version = "0.1.0"
description = "本地知识库 RAG 检索系统 — FastAPI + LangChain + ChromaDB"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.0",
    "langchain-classic>=1.0.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.0",
    "chromadb>=1.5.0",
    "pymupdf>=1.27.0",
    "sentence-transformers>=5.6.0",
    "dashscope>=1.25.0",
    "modelscope>=1.37.0",
    "python-magic>=0.4.27",
    "aiofiles>=25.1.0",
    "imagehash>=4.3.0",
    "pypdf>=6.13.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.0",
    "opencv-python-headless>=4.13.0",
    "pillow>=12.0.0",
    "numpy>=2.4.0",
    "jieba>=0.42.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.0",
    "unstructured>=0.23.0",
    "openpyxl>=3.1.0",
    "streamlit>=1.50.0",
    "requests>=2.32.0",
    "markdown>=3.10.2",
    "rank-bm25>=0.2.2",
    "torch>=2.5.0",
    "mistune>=3.3.2",
    # MinerU — 扫描件 PDF 云端解析 (langchain-mineru)
    "langchain-mineru>=0.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
